# TinyOrmPlayground

./: .clang-tidy.example  .env.example  .env.mingw.example  .env.unix.example  .env.win32.example  .gitignore  .qmake.conf.example  CMakeLists.txt  NOTES.txt  README.md  TinyOrmPlayground.pro  conf.pri.example  vcpkg.json  vcpkg.json.Manual.example  vcpkg.json.VcpkgManifest.Qt6.QtSql.example  vcpkg.json.VcpkgManifest.Qt6.TinyDrivers.example
cmake/CommonModules/: TinyHelpers.cmake  TinyResourceAndManifest.cmake
cmake/Modules/: TinyInitDefaultVariables.cmake  TinySources.cmake
config/: config_test.json
qmake/: common.pri  macxconf.pri  unixconf.pri  winconf.pri
qmake/features/: tiny_resource_and_manifest.prf  tiny_toolchain_requirement.prf  tiny_version_numbers.prf
resources/: TinyOrmPlayground.rc  TinyOrmPlayground.rc.in  TinyOrmPlayground_mingw.rc
src/: common.hpp  config.hpp  configuration.cpp  configuration.hpp  configurationsservice.cpp  configurationsservice.hpp  connectionsservice.cpp  connectionsservice.hpp  macros.hpp  main.cpp  pch.h  pch.pri  src.pri  testorm.cpp  testorm.hpp  version.hpp  version.hpp.in
src/concerns/: logsquerycounters.cpp  logsquerycounters.hpp
src/models/: setting.hpp  torrent.hpp  torrentpreviewablefile.hpp  torrentpreviewablefileproperty.hpp
src/models/models/: filepropertyproperty.hpp  role.hpp  torrent.hpp  torrentpeer.hpp  torrentpreviewablefileproperty.hpp  user.hpp
src/services/: configurationsservice.cpp  configurationsservice.hpp  querycountersservice.cpp  querycountersservice.hpp  service.cpp  service.hpp
src/support/: globals.hpp  messagehandler.cpp  messagehandler.hpp  utils.cpp  utils.hpp
src/tests/: test.cpp  test.hpp  testallothertests.cpp  testallothertests.hpp  testconnection.cpp  testconnection.hpp  testforplay.cpp  testforplay.hpp  testquerybuilder.cpp  testquerybuilder.hpp  testquerybuilderdbspecific.cpp  testquerybuilderdbspecific.hpp  testschemabuilder.cpp  testschemabuilder.hpp  testtinyorm.cpp  testtinyorm.hpp
tools/: Invoke-Playground.ps1  Invoke-TinyOrmPlayground.ps1  InvokeXTimes.ps1
